objects/User.object
<CustomObject>
    <fields>
        <fullName>CRM_Is_Lending_Specialist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Lending Specialist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Id__c</fullName>
        <label>Accreditation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Push_Date_Time__c</fullName>
        <label>Last Data Push Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Sync_Date_Time__c</fullName>
        <label>Last Successfull Data Sync Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Sync_Errors__c</fullName>
        <label>Data Sync Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Data_Sync_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Data Sync Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Mortgage_BDM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mortgage BDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id_Formula__c</fullName>
        <formula>TEXT(CRM_Mtg_Unique_Id__c)</formula>
        <label>Unique Id Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id__c</fullName>
        <description>This field would be used to capture the unique id of a BDM in Nextgen system.</description>
        <externalId>true</externalId>
        <label>Unique Id (ARM Id)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Mtg_User_Active_Formula__c</fullName>
        <formula>IF(IsActive, 
&apos;1&apos;, 
&apos;0&apos;)</formula>
        <label>User Active Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DLA_Personal_Loans__c</fullName>
        <description>Amount the user can approve for Personal Loans</description>
        <label>DLA Personal Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hoopla_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this box to add the user to Hoopla</description>
        <inlineHelpText>Tick this box to add the user to Hoopla</inlineHelpText>
        <label>Hoopla User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__LOOPlus_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will allow this user to run DDPs on a staging environment when testing is available.</inlineHelpText>
        <label>Drawloop Next Release Test User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsPassword__c</fullName>
        <label>DocuSign Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsToken__c</fullName>
        <label>DocuSign API UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to allow user to change an Opportunity stage from Pack Returned to Application Submitted</description>
        <inlineHelpText>Checkbox to allow user to change an Opportunity stage from Pack Returned to Application Submitted</inlineHelpText>
        <label>Pack Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this box to allow user to transition from packout stage to pack out returned on every opportunity</description>
        <inlineHelpText>Tick this box to allow user to transition from packout stage to pack out returned on every opportunity</inlineHelpText>
        <label>Packout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Daily_Refer_Count__c</fullName>
        <label>Daily Refer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Daily_Refer_Counter_Date__c</fullName>
        <label>Daily Refer Counter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_UserType__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESB User</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>@deprecated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>genesis__Party_Type__c</fullName>
        <label>Party Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>genesis__Type__c</fullName>
        <label>Quick Quote Type</label>
        <picklist>
            <picklistValues>
                <fullName>DEALER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIRECT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Current_Branch__c</fullName>
        <label>Current Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Current_Branch_s_System_Date__c</fullName>
        <label>Current Branch&apos;s System Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Current_System_Date__c</fullName>
        <label>Current System Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Default_Branch__c</fullName>
        <label>Default Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Is_Teller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Teller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Teller_GL__c</fullName>
        <label>Teller GL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ALLuSERS</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveAdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Admin Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveCollectionsUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>Hoopla_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>COL</value>
        </filters>
        <label>Active Collections Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveEmployees</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active Employees</label>
    </listViews>
    <listViews>
        <fullName>ActiveSalesOfficers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>Hoopla_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Sales Officer</value>
        </filters>
        <label>Active Sales Officers</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AutoUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.MIDDLE_NAME</field>
            <operation>equals</operation>
            <value>Automation</value>
        </filters>
        <label>Automation Users</label>
    </listViews>
    <listViews>
        <fullName>FrozenEmployees</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Frozen Employees</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Employees</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Inactive Employees</label>
    </listViews>
    <listViews>
        <fullName>KnowledgeEmployees</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KNOWLEDGE_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Knowledge Employees</label>
    </listViews>
    <listViews>
        <fullName>PAFUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>CRM PAF</value>
        </filters>
        <label>PAF Users</label>
    </listViews>
    <listViews>
        <fullName>SAASFocus</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>saasfocus</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>cloudlend</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>haylix</value>
        </filters>
        <label>SAASFocus &amp; CLS</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>loan__Teller_Check</fullName>
        <active>false</active>
        <errorConditionFormula>loan__Is_Teller__c &amp;&amp; ISBLANK( loan__Teller_GL__c )</errorConditionFormula>
        <errorMessage>GL must be entered for a teller.</errorMessage>
    </validationRules>
</CustomObject>